[package]
name = "nea-esi"
version = "0.6.0"
edition = "2024"
description = "Rate-limited Rust client for EVE Online's ESI (EVE Swagger Interface) API"
license = "MIT"
repository = "https://github.com/idknerdyshit/nea-esi"
keywords = ["eve-online", "esi", "api-client", "eve"]
categories = ["api-bindings", "games"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
rand = "0.10"
sha2 = "0.10"
base64 = "0.22"
url = "2"
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
