[package]
name = "nea-esi-cli"
version = "0.1.0"
edition = "2024"
description = "Interactive CLI for EVE Online's ESI API"
license = "MIT"
repository = "https://github.com/idknerdyshit/nea-esi"

[[bin]]
name = "nea-esi-cli"
path = "src/main.rs"

[dependencies]
nea-esi = { path = "../nea-esi" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tabled = "0.17"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
directories = "6"
open = "5"
tiny_http = "0.12"
dialoguer = "0.11"
rustyline = "15"
colored = "3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shlex = "1"
url = "2"
